--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a id="logo">
             <!-- Anchor elements that create hyperlinks-->
             <h1>Vishal Patel</h1>
-            <h2>Portfolio Manager</h2>
+            <h2>Software Engineer</h2>
         </a>
         <nav>
             <!-- navigation function -->
